@@ -12,7 +12,7 @@ MODULE global_version
   !
   SAVE
   !
-  CHARACTER (LEN=6) :: version_number = '5.1.2'
+  CHARACTER (LEN=6) :: version_number = '5.2.0'
   CHARACTER (LEN=12) :: svn_revision = 'unknown'
   !
 END MODULE global_version
